--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "cowsay": "^1.4.0",
-    "express": "^4.17.1",
-    "react-router-dom": "^5.1.2"
+    "express": "^4.17.1"
   }
 }
